unpackaged/main/default/objects/Coupon_Category__c/Coupon_Category__c.object-meta.xml
<CustomObject>
    <description>[#EPH-7160] Object_ Coupon Category</description>
    <label>Coupon Category</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Coupon Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>