unpackaged/main/default/objects/Coupon_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7160 Object: Coupon Category</description>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category_Tree__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category_Tree__c</referenceTo>
    <relationshipLabel>Coupon Categories</relationshipLabel>
    <relationshipName>Coupon_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>