unpackaged/main/default/objects/Coupon_Category__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <description>[#EPH-7291] Coupon Category Object - Field lookups to Category Tree Object</description>
    <formula>Category__r.Category_ID__c</formula>
    <label>Category ID</label>
    <type>Text</type>
</CustomField>