unpackaged/main/default/objects/Coupon_Category__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <description>US-0011375</description>
    <formula>&#39;Home&#39; + IF( !ISBLANK( Category__r.Note_ID__c ) ,
&#39; &gt; &#39;+ Category__r.Note_ID__r.Name, &#39;&#39;) + IF( !ISBLANK( Category__c ) , &#39; &gt; &#39; +  Category__r.Name  , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>