unpackaged/main/default/objects/Coupon_Category__c/fields/Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Category_Level__c</fullName>
    <description>#EPH-7160] Object_ Coupon Category</description>
    <formula>Category__r.Level__c</formula>
    <label>Category Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>