unpackaged/main/default/objects/Coupon_Category__c/fields/Category_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_Site_ID__c</fullName>
    <formula>Category__r.Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Site ID</label>
    <type>Text</type>
</CustomField>