unpackaged/main/default/objects/Coupon_Category__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7160 Object: Coupon Category,
US-0011385 - External Sharing for Coupon Category/ Category Tree</description>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Coupon__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Category_Based,Pop_Coupon,Item_Based</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Coupon Categories</relationshipLabel>
    <relationshipName>Coupon_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>