unpackaged/main/default/objects/Coupon_Category__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <description>EPH-7160 Object: Coupon Category</description>
    <formula>Coupon__r.Coupon_ID__c</formula>
    <label>Coupon ID</label>
    <type>Text</type>
</CustomField>