unpackaged/main/default/objects/Coupon_Category__c/fields/Coupon_Item_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item_Negotiation__c</fullName>
    <description>US-0011958 - Change Requests Focus 75</description>
    <formula>IF(AND(Coupon__r.RecordType.DeveloperName=&#39;Item_Based&#39;, ISPICKVAL(Coupon__r.Stage__c, &#39;Seller Negotiation&#39;)) , true, false)</formula>
    <label>Coupon Item Negotiation</label>
    <type>Checkbox</type>
</CustomField>