unpackaged/main/default/objects/Coupon_Category__c/fields/Coupon_Main_Site__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Main_Site__c</fullName>
    <description>US-0011958 - Change Requests Focus 75</description>
    <label>Coupon Main Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>