unpackaged/main/default/objects/Coupon_Category__c/fields/Exception_Category__c.field-meta.xml
<CustomField>
    <fullName>Exception_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0015718 Coupon - Allow Coupon Owner to add Category Exceptions</description>
    <label>Exception Category</label>
    <type>Checkbox</type>
</CustomField>