unpackaged/main/default/objects/Coupon_Category__c/fields/Is_Visible_in_Seller_Portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible_in_Seller_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011385 - External Sharing for Coupon Category/ Category Tree</description>
    <label>Is Visible in Seller Portal</label>
    <type>Checkbox</type>
</CustomField>