unpackaged/main/default/objects/Coupon_Category__c/fields/Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_Name__c</fullName>
    <description>[#EPH-7350] New field for Object: Coupon Category</description>
    <formula>CASE(Category__r.Level__c, 0, &#39;Site Level&#39;, 1, &#39;Meta Category&#39;, 2, &#39;L2 Category&#39;, 3, &#39;L3 Category &#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Name</label>
    <type>Text</type>
</CustomField>